Changelog
=========


v0.0.16.1
=========

- New: UnitOfMeasureHelpers.UnitOfMeasures (ReadOnlyCollection<string>)

v0.0.16.0
=========

Released on October 30, 2018.

- New: Support for Product model.

v0.0.15.14
==========

Released on October 25, 2018.

- Fix: Payment.PaymentMethod defaults to a PaymentHelpers.PaymentMethods reference.
- Fix: Payment.FirstPaymentDate defaults to a PaymentHelpers.FirstPaymentDates reference.
- Fix: Payment.FirstPaymentOption defaults to a PaymentHelpers.FirstPaymentOptions reference.
- Fix: PaymentHelpers.FirstPaymentDates is not a ReadOnlyCollection. Addresses #9.
- Fix: PaymentHelpers.FirstPaymentOptions is not a ReadOnlyCollection. Addresses #9.

v0.0.15.13
==========

Released on October 16, 2018.

- Move Contact.EInvoiceId to Contact.SalesSettings.

v0.0.15.12
==========

Released on October 3, 2018.

- Remove EmailAddress attributes.
- Remove Required attributes.

v0.0.15.11
==========

Released on September 26, 2018.

- Properties decorated with EmailAdress attribute now also use custom error messages.

v0.0.15.10
=========

Released on September 26, 2018.

- MailTemplate.Id is now of Guid type.

v0.0.15.9
=========

Released on September 18, 2018.

- Switch to NetStandard 1.3.
- Rename Contact.PublicAdministrationCode as Contact.EinvoiceId.
- Rename PaymentMethod.PublicAdministrationCode as PaymentMethod.Code.
- Fix MailSettings.SmtpAddress Display Name attribute.
- Add Contact.PurchaseSettings property.
- Add Contact.SalesSettings property.
- Add PurchaseSettings class.
- Add SalesSettings class.
- Add EmailAddressAttribute to MailTemplate.FromAddressa.
- Add EmailAddressAttribute to AddressEx.Mail and AddessEx.PecMail.

v0.0.15.8
=========

Released on September 17, 2018.

- Rename MailSettings.SmtpServer property.

v0.0.15.7
=========

Released on September 12, 2018.

- Add MailSettings.Id property.

v0.0.15.6
=========

Released on September 11, 2018.

- Fix: MailSettings inherits from BaseModelWithCompanyId.